# geo-collect

./: .gitignore  README.md  pyproject.toml
config/: config-acquisition.yaml  config-exceptions-handler.yaml
src/rnipp_geo_data_collector/: cli.py  main.py
src/rnipp_geo_data_collector/acquisition/: config.py  download.py
src/rnipp_geo_data_collector/acquisition/suppliers/: laposte.py  wikidata.py
src/rnipp_geo_data_collector/acquisition/suppliers/insee/: config.py  requests.py
src/rnipp_geo_data_collector/acquisition/suppliers/insee/checks/: abstract.py  apply_update.py  article_code.py  date_consistency.py  end_date.py  end_event_consistency.py  error_handler.py  events_consistency.py  events_unequal.py  insee_code.py  insee_code_overlap.py  parent_period_include.py  parent_period_no_gaps.py  parent_period_overlap.py  parent_unicity.py  parent_uri_exist.py  parsing.py  pattern.py  start_date.py  uri_format.py  uri_unicity copy.py  uri_unicity.py
src/rnipp_geo_data_collector/acquisition/suppliers/insee/requests/: arrondissements_municipaux.rq  collectivites_outremer.rq  communes.rq  departements.rq  districts.rq  events.rq  pays.rq
src/rnipp_geo_data_collector/acquisition/suppliers/insee/sql/: arrondissements_municipaux_copy.mustache.sql  arrondissements_municipaux_correct.mustache.sql  arrondissements_municipaux_import.mustache.sql  article_code_check.mustashe.sql  article_code_correct.mustashe.sql  communes_copy.mustache.sql  (+40 more)
src/rnipp_geo_data_collector/acquisition/suppliers/laposte/: config.py  requests.py
src/rnipp_geo_data_collector/utils/: duckdb.py
(+7 files in other folders)
